--- a/02-GIScience.qmd
+++ b/02-GIScience.qmd
@@ -1,5 +1,5 @@
 # GIScience and GIS software
-This week’s lecture introduced you to foundational concepts associated with GIScience and GIS software, with particular emphasis on the representation of spatial data and sample design. Out of all our foundational concepts you will come across in the next four weeks, this is probably the most substantial to get to grips with and has both significant theoretical and practical aspects to its learning. The practical component of the week puts some of these learnings into practice, starting with a short digitisation excercise followed by a simple visualisation of London's population over time.
+This week’s lecture introduced you to foundational concepts associated with GIScience and GIS software, with particular emphasis on the representation of spatial data and sample design. Out of all our foundational concepts you will come across in the next four weeks, this is probably the most substantial to get to grips with and has both significant theoretical and practical aspects to its learning. The practical component of the week puts some of these learnings into practice, starting with a short digitisation excercise followed by a simple visualisation of London's population in the Census years of 2011 and 2021.
 
 ## Lecture slides {#slides-w01}
 The slides for this week's lecture can be downloaded here: [\[Link\]]({{< var slides.week02 >}})
