--- a/11-data.qmd
+++ b/11-data.qmd
@@ -61,7 +61,7 @@ Some other websites that could be helpful:
 ## Safeguarded Data
 Undergraduate students can also apply for a **Safeguarded** dataset held by the [Consumer Data Research Centre](https://www.cdrc.ac.uk/). There is a process to access these **Safeguarded** datasets, which is detailed on the [CDRC website](https://data.cdrc.ac.uk/using-our-data-services). Please be aware that it normally takes 4-5 weeks for your application to be processed.
 
-As part of the process, you will need to say in your application why you want that specific dataset and what you are planning to do with it. You will also need to have at least thought about the ethical implications of using that data and provide this with your data application (alongside your standard ethics application).
+As part of the process, you will need to state in your application why you want that specific dataset and what you are planning to do with it. You will also need to have at least thought about the ethical implications of using that data and provide this with your data application (alongside your standard ethics application).
 
 Some of the datasets held by the CDRC that you can apply for are: 
 
