--- a/05-spatial.qmd
+++ b/05-spatial.qmd
@@ -23,7 +23,7 @@ To analyse crime over space, we will go through several steps of data preparatio
 OAs, LSOAs and MSOAs make up the different levels of the census statistical geographies. Middle layer Super Output Areas (MSOAs) are made up of groups of LSOAs, usually four or five. They comprise between 2,000 and 6,000 households and have a usually resident population between 5,000 and 15,000 persons. For details see the explanation on the webapge of the [Office for National Statistics](https://www.ons.gov.uk/methodology/geography/ukgeographies/censusgeographies/census2021geographies#middle-layer-super-output-areas-msoas)
 :::
 
-### Spatial analysis set up
+### Spatial analysis set up {#setup-w05}
 Open a new script within your GEOG0030 project and save this script as `wk5-crime-spatial-processing.r`. At the top of your script, add the following metadata:
 
 ```{r}
